--- a/index.html
+++ b/index.html
@@ -8,10 +8,21 @@
 </head>
 
 <body>
+	<nav class="navbar">
+		<div class="logo">
+			<img src="./assets/logo.png" width="50px" alt="logo icon" /> 
+			<span>Luxurings</span></div>
+		<button class="buy">Buy now</button>
+	</nav>
+
+
 	<div id="webgi-canvas-container">
 		<canvas id="webgi-canvas"></canvas>
 	</div>
 
+	<section>
+		Masterpieces on Your Wrist
+	</section>
 	<script src="src/index.ts" type="module"></script>
 </body>
 
